--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       margin: 0;
-      font-family: 'Frutiger LT Arabic', sans-serif;
+      font-family: 'Frutiger LT Arabic';
       text-align: center;
       background-color: #3ebfbb;
     }
@@ -72,7 +72,7 @@
     nameInput.addEventListener('input', () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(image, 0, 0);
-      ctx.font = '40px Frutiger LT Arabic', sans-serif;
+      ctx.font = '40px Frutiger LT Arabic';
       ctx.fillStyle = '#7e543a';
       ctx.textAlign = 'center';
       ctx.fillText(nameInput.value, canvas.width / 2, canvas.height - 350);
