--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       margin: 0;
-      font-family: 'Frutiger LT Arabic';
+      font-family: 'Frutiger LT Arabic', sans-serif;
       text-align: center;
       background-color: #3ebfbb;
     }
