--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     nameInput.addEventListener('input', () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(image, 0, 0);
-      ctx.font = '40px Frutiger LT Arabic';
+      ctx.font = 'Frutiger LT Arabic 65 Bold';
       ctx.fillStyle = '#7e543a';
       ctx.textAlign = 'center';
       ctx.fillText(nameInput.value, canvas.width / 2, canvas.height - 350);
