--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
     nameInput.addEventListener('input', () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(image, 0, 0);
-      document.fonts.load('40px "Frutiger LT Arabic"').then(() => {
-      ctx.font = '40px "Frutiger LT Arabic"';
+      ctx.font = '40px Frutiger LT Arabic';
       ctx.fillStyle = '#7e543a';
       ctx.textAlign = 'center';
       ctx.fillText(nameInput.value, canvas.width / 2, canvas.height - 350);
-});
+    });
 
     function generateCard() {
       const link = document.createElement('a');
